feat(phase4): performance, security & quality hardening
- Redis caching layer (vendors 5min, menus 3min, search 2min TTLs)
- Redis-backed per-user/IP rate limiting (100 req/min, 20 auth/min)
- OWASP security headers (CSP, HSTS, X-Frame-Options, etc.)
- Response time header (X-Response-Time)
- Refresh token rotation (one-time-use tokens)
- WebSocket JWT validation on STOMP CONNECT
- GDPR user deletion endpoint (DELETE /api/users/me)
- Resilience4j circuit breaker for Stripe payments
- CORS from environment configuration
- HikariCP connection pool tuning
- JaCoCo coverage plugin (50% minimum)
- K8s HPA autoscaling manifests (backend + frontend)
- k6 load test scripts (smoke, load 100VUs, stress 500VUs)
- Controller integration tests (Vendor, Favorite, Notification, Promo)
- Fixed pre-existing OrderServiceTest mock for CARD payment flow

166 tests pass, 0 failures